force-app/main/default/objects/Table__c/Table__c.object-meta.xml
<CustomObject>
    <description>Represents a physical restaurant table</description>
    <label>Table</label>
    <nameField>
        <label>Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>