force-app/main/default/objects/Table__c/fields/Current_Session__c.field-meta.xml
<CustomField>
    <fullName>Current_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Session</label>
    <referenceTo>Table_Session__c</referenceTo>
    <relationshipLabel>Tables</relationshipLabel>
    <relationshipName>Tables</relationshipName>
    <type>Lookup</type>
</CustomField>