force-app/main/default/objects/Table__c/fields/Table_Number__c.field-meta.xml
<CustomField>
    <fullName>Table_Number__c</fullName>
    <description>Unique identifier displayed to staff</description>
    <label>Table Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>